[package]
name = "mempool_encryption"
version = "0.1.0"
edition = "2024"

[features]
default = ["std", "blst", "parallel"]
std = []
parallel = ["rayon"]
blst = ["std"]

[dependencies]
blake3 = "1.5"
blstrs = "0.7"
ff = "0.13"
group = "0.13"
pairing = "0.23"
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
rayon = { version = "1.10", optional = true }
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zeroize = "1.7"

# Additional deps needed for spec (HKDF + AEAD)
hkdf = "0.12"
sha2 = "0.10"
chacha20poly1305 = { version = "0.10", features = ["std"] }

[dev-dependencies]
rand = "0.8"
