[package]
name = "mempool_encryption"
version = "0.1.0"
edition = "2024"

[features]
default = ["std", "blst", "parallel"]
std = []
parallel = ["rayon"]
blst = ["std"]

[dependencies]
blake3 = "1.5"
base64 = "0.22"
blstrs = "0.7"
ff = "0.13"
group = "0.13"
pairing = "0.23"
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
rayon = { version = "1.10", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zeroize = "1.7"
tess = { git = "https://github.com/zz-sol/Tess", default-features = false, features = ["blst", "std"] }

# Additional deps needed for spec (HKDF + AEAD)
hkdf = "0.12"
sha2 = "0.10"
aes-gcm = { version = "0.10", features = ["std"] }

[dev-dependencies]
rand = "0.8"
criterion = "0.5"

[[bench]]
name = "bls_dkg_steps"
harness = false
